testsuite/tests/grammar/invalid_lkt/unknown_rule_annot.lkt
import lexer_example

grammar foo_grammar {
    @main_rule rule1 <- Example("example")
    @foo rule2 <- Example("example")
}
